Refine buttons and spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,13 +10,16 @@ nav {
     left: 0;
 }
 
-#headshot, #resume, #projects {
+#headshot,
+#resume,
+#projects {
     margin-top: 2vh;
     display: flex;
     justify-content: space-evenly;
 }
 
-#resume-header, #projects-header{
+#resume-header,
+#projects-header {
     text-align: center;
     padding: 5%;
 }
@@ -25,6 +28,17 @@ body {
     background-color: var(--apl-light);
 }
 
-#projects-header, h3 {
+#projects-header,
+h3 {
     color: var(--bs-primary);
+}
+
+#front-buttons {
+    width: 20vw;
+    display: grid;
+}
+
+#front-buttons a {
+    margin: 7%;
+    align-items: center;
 }
